--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -106,7 +106,7 @@
     msg: This server is running the {{ ansible_distribution }} distribution in the {{ ansible_os_family }} OS family.
     verbosity: 1
   tags: caddy_v2
-- name: setup Caddy V2 web server on Arch Linux
+- name: setup Caddy V2 web server
   import_tasks: caddy.yml
   tags: caddy_v2
 
