got test server working using Caddy's local CA
I renamed some files, because we may have multiple kinds of testing, e.g. testing with a local CA, then testing with Let's Encrypt's staging environment.

Here we are using Caddy's built-in local CA to sign certificates, so we can use HTTPS just as we do in production.

I made the test webpage use both Caddy templates and Ansible templates to display different variables, to make it easier to debug any problems.

Some details in the Caddy forum at https://caddy.community/t/v2-how-to-test-caddyfile-etc-before-deploying-to-production/7495

I also began setting up a way to install packages at the beginning of the main tasks file, instead of piecemeal throughout.

--- a/roles/sunrise/tasks/caddy.yml
+++ b/roles/sunrise/tasks/caddy.yml
@@ -1,6 +1,6 @@
 - name: include testing vars file when testing
-  include_vars: test_vars.yml
-  when: test_mode
+  include_vars: local_tls.yml
+  when: local_tls
 
 # some tips for systemd services: https://github.com/caddyserver/caddy/blob/master/dist/init/linux-systemd/README.md
 - name: install caddy.service file from template
@@ -55,15 +55,17 @@
     owner: '{{ web_server_user }}'
     group: '{{ web_server_user }}'
     mode: 0755
-- name: install test website
-  copy:
-    src: index.html
-    dest: /srv/{{ test_domain }}/{{ test_subdomain }}/public/
+
+- name: install test website from template
+  template:
+    src: index.html.j2
+    dest: /srv/{{ test_domain }}/{{ test_subdomain }}/public/index.html
     owner: '{{ web_server_user }}'
     group: '{{ web_server_user }}'
     mode: 0755
   notify:
     - reload caddy
+  tags: test_website
 
 # Download binary from GitHub and install it
 - name: download + extract caddy binary
@@ -118,7 +120,7 @@
   loop:
     - git
     - golang-go
-  when: building_caddy
+  when: building_caddy and ansible_distribution == 'Ubuntu'
 
 - name: checkout Caddy v2 repository
   git:
