--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -2,6 +2,28 @@
   include_vars: "{{ ansible_distribution }}.yml"
   tags: always
 
+- name: update apt sources + upgrade packages
+  apt:
+    update_cache: yes
+    cache_valid_time: 3600
+    upgrade: safe
+  tags: updategrade
+  when: ansible_os_family == 'Debian'
+
+- name: update sources + upgrade packages
+  pacman: 
+    update_cache: yes
+    upgrade: yes
+  tags: updategrade
+  when: ansible_os_family == 'Archlinux'
+
+- name: install initial packages
+  package:
+    name: '{{ item }}'
+  loop: "{{ initial_packages }}"
+  tags: initial_packages
+  when: initial_packages is defined
+
 - name: Add limited user accounts for all Sunrise sysadmins
   user:
     name: "{{ item.name }}"
@@ -25,21 +47,6 @@
 # https://docs.ansible.com/ansible/latest/user_guide/playbooks_loops.html#with-subelements
   loop: "{{ users|subelements('sshKey') }}"
   tags: authorized_keys
-
-- name: update apt sources + upgrade packages
-  apt:
-    update_cache: yes
-    cache_valid_time: 3600
-    upgrade: safe
-  tags: updategrade
-  when: ansible_os_family == 'Debian'
-
-- name: update sources + upgrade packages
-  pacman: 
-    update_cache: yes
-    upgrade: yes
-  tags: updategrade
-  when: ansible_os_family == 'Archlinux'
 
 # first, put local_hostname in ansible inventory
 - name: set system's hostname
