--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -47,6 +47,6 @@ caddy_archive_url: https://github.com/caddyserver/caddy/releases/download/v2.0.0
 # caddy_binary_url: https://github.com/caddyserver/caddy/releases/download/v2.0.0-beta.20/caddy2_beta20_linux_amd64
 test_domain: sunrisemovement.dev
 test_subdomain: www
-building_caddy: false
+building_caddy: true
 # caddy_git_version: v2
 caddyfile_name: Caddyfile.j2
