handcoded RI PHP site now works
SFbay now uses Hugo instead of being handcoded, so we'll deal with that in the Hugo tasks section.

This should bring us roughly to feature parity with the main branch, since we never had Hugo sites working properly anyway, so I'm gonna make the "arch" branch the main branch. Maybe I'll back up the old branch for historical purposes... or maybe not.

--- a/roles/sunrise/tasks/caddy.yml
+++ b/roles/sunrise/tasks/caddy.yml
@@ -1,6 +1,7 @@
-- name: include testing vars file when testing
+- name: include local TLS file when testing
   include_vars: local_tls.yml
   when: local_tls
+  tags: always
 
 # tips for systemd services: https://github.com/caddyserver/caddy/blob/master/dist/init/linux-systemd/README.md
 - name: install caddy.service file from template
