further attempts to make Hugo work
I got rid of the separate Hugo vars file, merged that into main.

We're stuck on the step where we decide which sites need to be re-generated using Hugo.

--- a/roles/sunrise/vars/Archlinux.yml
+++ b/roles/sunrise/vars/Archlinux.yml
@@ -1,6 +1,7 @@
 os_packages:
   - which # to find where executables are installed
   - go # needed to build Caddy from source
+  - hugo # static site generator https://gohugo.io/
 
 sudoing_group: wheel
 web_server_user: http
