--- a/roles/sunrise/tasks/hugo.yml
+++ b/roles/sunrise/tasks/hugo.yml
@@ -1,16 +1,20 @@
 ---
-- name: include vars file
-  include_vars: hugo.yml
+- name: include local TLS file when testing
+  include_vars: local_tls.yml
+  when: local_tls
+  tags: always
 
 - name: install latest Hugo .deb from Github
   apt:
     deb: "{{ hugo_deb_url }}"
+  when: ansible_os_family == 'Debian'
 
 # TODO: Create our own apt repository for Caddy and Hugo
+# Or possibly take over the packages in Arch to make sure they stay up to date
 
 - name: install Caddyfile from template
   template:
-    src: Caddyfile.j2
+    src: '{{ caddyfile_name }}'
     dest: /etc/caddy/Caddyfile
     owner: root
     group: root
@@ -51,27 +55,27 @@
 
 - name: create config.toml file from template
   template:
-    src: config.toml
+    src: config.toml.j2
     dest: /srv/{{ item.domain }}/{{ item.subdomain }}/public/config.toml
     owner: '{{ web_server_user }}'
     group: '{{ web_server_user }}'
   loop: "{{ hugo_sites }}"
   register: config_changes
 
-- name: print that shit
+- name: print theme_changes
   debug:
-    var: regen_sites
+    var: theme_changes
+- name: print config_changes
+  debug:
+    var: config_changes
 
-- name: decide which sites to restart
+- name: decide which sites to reload
   set_fact:
     regen_sites: "{{ theme_changes.results + config_changes.results | default([]) + [item.item] }}"
   when: item.changed == true
 
-- name: regenerate Hugo site again
+- name: re-generate Hugo site
   command: hugo
   args:
     chdir: /srv/{{ item.domain }}/{{ item.subdomain }}/public
   loop: regen_sites
-  
-
-
