--- a/roles/sunrise/tasks/main.yml
+++ b/roles/sunrise/tasks/main.yml
@@ -115,9 +115,9 @@
   tags: new_handcoded
 
 # Hugo playbook doesn't work yet
-# - name: set up Hugo websites
-#   import_tasks: hugo.yml
-#   tags: hugo
+- name: set up Hugo websites
+  import_tasks: hugo.yml
+  tags: hugo
 
 # TODO: set up Longview - record and view stats, data to help diagnose problems
 
