--- a/roles/sunrise/vars/main.yml
+++ b/roles/sunrise/vars/main.yml
@@ -50,3 +50,11 @@ handcoded_websites:
   - subdomain: ri
     domain_name: sunrisemovement.dev
     git_repo: https://github.com/michaelkearney55/ri.sunrisemovement.org.git
+
+hugo_deb_url: https://github.com/gohugoio/hugo/releases/download/v0.69.0/hugo_0.69.0_Linux-64bit.deb
+hugo_sites:
+  - title: Sunrise Movement Philadelphia
+    domain: sunrisemovement.dev
+    subdomain: philadelphia
+    theme_repo: https://github.com/sunrisemovement/hugo-black-and-light-theme.git
+    theme_name: black-and-light
