--- a/linode_destroy.yml
+++ b/linode_destroy.yml
@@ -19,3 +19,5 @@
       dest: ~/.ssh/known_hosts
       regexp: "^{{ linode_label }}"
       state: absent
+# TODO: add task for manual confirmation? 
+# We don't want to destroy servers by accident
