rewrite as stupid handler
This is stupid because the handler runs twice if both the theme and the config have changed. That said, it's much easier to understand!

--- a/roles/sunrise/handlers/main.yml
+++ b/roles/sunrise/handlers/main.yml
@@ -36,8 +36,20 @@
     state: present
   listen: restart caddy
 
-- name: regenerate hugo
+# TODO: this handler runs twice if both theme and config changed
+# should only run once
+# https://github.com/sunrisemovement/devops/issues/11
+- name: re-generate Hugo if theme changed
   command: hugo
   args:
-    chdir: /srv/{{ domain_name }}
-    creates: /srv/{{ domain_name }}/public
+    chdir: /srv/{{ item.item.domain }}/{{ item.item.subdomain }}/public
+  loop: '{{ theme_changes.results }}'
+  when: item.changed
+  listen: re-generate Hugo site
+- name: re-generate Hugo if config changed
+  command: hugo
+  args:
+    chdir: /srv/{{ item.item.domain }}/{{ item.item.subdomain }}/public
+  loop: '{{ config_changes.results }}'
+  when: item.changed
+  listen: re-generate Hugo site
