two separate handlers
it should be one handler that runs once IMHO, but we're not there yet. If it's running twice anyway, it might as well be two separate things.

--- a/roles/sunrise/handlers/main.yml
+++ b/roles/sunrise/handlers/main.yml
@@ -39,17 +39,17 @@
 # TODO: this handler runs twice if both theme and config changed
 # should only run once
 # https://github.com/sunrisemovement/devops/issues/11
-- name: re-generate Hugo if theme changed
+- name: run Hugo if theme changed
   command: hugo
   args:
     chdir: /srv/{{ item.item.domain }}/{{ item.item.subdomain }}/public
   loop: '{{ theme_changes.results }}'
   when: item.changed
-  listen: re-generate Hugo site
-- name: re-generate Hugo if config changed
+  # listen: re-generate Hugo site
+- name: run Hugo if config changed
   command: hugo
   args:
     chdir: /srv/{{ item.item.domain }}/{{ item.item.subdomain }}/public
   loop: '{{ config_changes.results }}'
   when: item.changed
-  listen: re-generate Hugo site
+  # listen: re-generate Hugo site
